# poly-sentient-market

app/: layout.tsx  page.tsx
app/agent/: page.tsx
app/api/balance/: route.ts
app/api/btc-price/: route.ts
app/api/cancel-order/[orderId]/: route.ts
app/api/kalshi-connect/: route.ts
app/api/kxbtcd-debug/: route.ts
app/api/limit-sell-order/: route.ts
app/api/market-quote/[ticker]/: route.ts
app/api/markets/: route.ts
app/api/orderbook/[ticker]/: route.ts
app/api/orders/[orderId]/: route.ts
app/api/pipeline/: route.ts
app/api/place-order/: route.ts
app/api/positions/: route.ts
app/api/sell-order/: route.ts
app/api/settings/config/: route.ts
app/dashboard/: page.tsx
app/dashboard/hourly/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
components/: AgentAllowancePanel.tsx  AgentPipeline.tsx  AgentStatsPanel.tsx  Header.tsx  HourlyHeader.tsx  MarketCard.tsx  PositionsPanel.tsx
deploy/: nginx-s.conf  poly-sentient-sidecar.service
docs/: POLYMARKET-CONVERSION-PLAN.md  PORT-FROM-POLY-DASH.md
exec-rs/: .env.example  Cargo.toml
exec-rs/src/: main.rs
hooks/: useMarketTick.ts  usePipeline.ts
lib/: market-time.ts  server-agent-hourly.ts  server-agent.ts
lib/agents/: market-discovery.ts
lib/polymarket/: exec.ts  feed.ts  types.ts
